--- a/src/components/ComingSoon.css
+++ b/src/components/ComingSoon.css
@@ -40,51 +40,70 @@
   }
   .mute {
     position: absolute;
-    top: 30px;
-    right: 20px;
-    width: 90px;
-    height: 80px;
+    top: 25px;
+    right: 210px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
   }
-  
+  .mute1 {
+    position: absolute;
+    top: 25px;
+    right: 120px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+  }
+  .mute2 {
+    position: absolute;
+    top: 25px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+  }
   /* coming soon text */
   .coming-soon-text {
     font-size: 72px;
-    font-weight: 300;
+    font-weight: 400;
     color: white;
     text-align: center;
-    margin-bottom: -20px;
+    margin-bottom: -10px;
     font-family: "oswald";
     letter-spacing: 12px;
   }
   
   .coming-soon-text1 {
     font-size: 22px;
-    font-weight: 300;
-    color: white;
+    font-weight: 400;
+    color: #C2C2C2;
     text-align: center;
     margin-bottom: 0px;
-    font-family: "oswald";
+    font-family: "montserrat";
     letter-spacing: 2px;
   }
   
   /* get in touch button */
   .get-in-touch-button {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 400;
     color: white;
     background-color: #F3CC00;
     background-color: rgba(243, 204, 0, 0.5);
-    padding: 15px 30px;
+    padding: 8px 20px;
     border: none;
    
     cursor: pointer;
     transition: background-color 0.3s;
-    font-family: "oswald";
+    font-family: "montserrat";
     letter-spacing: 2px;
     margin-top: 20px;
-  }
-  
+   text-decoration: none;
 
+  }
+
+
+ 
   
   /* background audio */
   .background-audio {
@@ -128,27 +147,27 @@
       }
     .coming-soon-text {
         font-size: 35px;
-        font-weight: 300;
+        font-weight: 400;
         color: white;
         text-align: center;
         margin-bottom: 0px;
         font-family: "oswald";
         letter-spacing: 8px;
         position: relative;
-        top:28px
+        top:10px
       }
 
       .coming-soon-text1 {
         font-size: 15px;
-        font-weight: 300;
-        color: white;
+        font-weight: 400;
+        color: #C2C2C2;
         text-align: center;
         margin-bottom: 0px;
-        font-family: "oswald";
+        font-family: "montserrat";
         letter-spacing: 2px;
         max-width: 70%;
         position: relative;
-        top:28px
+        top:25px
       }
 
       .image-left-container {
@@ -173,17 +192,31 @@
        /* logo */
   .logo {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top:10px;
+    left: 10px;
     width: 120px;
-    height: 80px;
+    height: 85px;
   }
   .mute {
     position: absolute;
-    top: 30px;
-    right: 20px;
-    width: 70px;
-    height: 70px;
+    top: 85%;
+    right: 63%;
+    width: 50px;
+    height: 50px;
+  }
+  .mute1 {
+    position: absolute;
+    top: 85%;
+    right: 43%;
+    width: 50px;
+    height: 50px;
+  }
+  .mute2 {
+    position: absolute;
+    top: 85%;
+    right: 23%;
+    width: 50px;
+    height: 50px;
   }
   .get-in-touch-button {
     font-size: 20px;
@@ -191,17 +224,18 @@
     color: white;
     background-color: #F3CC00;
     background-color: rgba(243, 204, 0, 0.5);
-    padding: 15px 30px;
+    padding: 8px 20px;
     border: none;
    
     cursor: pointer;
     transition: background-color 0.3s;
-    font-family: "oswald";
+    font-family: "montserrat";
     letter-spacing: 2px;
     margin-top: 20px;
     position: relative;
     top:28px
   }
+  
   
   }
   
